--- a/index.html
+++ b/index.html
@@ -3,49 +3,71 @@
 
   <head>
     <meta charset="utf-8">
-    <title>MapleServer Home</title>
+    <title>MapleServer | Home</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto+Slab&display=swap" rel="stylesheet">
   </head>
 
   <body>
-    <table cellspacing="20">
-      <tr>
-        <td><img src="images/mapleleaf.png"/></td>
-        <td><h1>MapleServer Website</h1>
-            <h3>Welcome to MapleServer</h3>
-        </td>
-      </tr>
-    </table>
-    <hr>
+    <div class="header">
+      <img class="leaf" src="images/mapleleaf.png" alt="leaf">
+      <h1 class="server-name">MapleServer</h1>
+      <p class="header-p">5x Exp | 2x Meso | 2x Drops</p>
+    </div>
 
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="register.html">Register</a></li>
-      <li><a href="index.html">Download</a></li>
-      <li><a href="index.html">Forums</a></li>
-      <li><a href="index.html">Vote</a></li>
-    </ul>
-    <hr width="150" align="left">
-    <h3>Server Information:</h3>
-    <hr width="150" align="left">
+    <div class="navbar">
+      <ul>
+        <li class="navbar-server-name">MapleServer</li>
+        <li class="navbar-li"><a class="navbar-link" href="index.html">Home</a></li>
+        <li class="navbar-li"><a class="navbar-link" href="register.html">Register</a></li>
+        <li class="navbar-li"><a class="navbar-link" href="index.html">Downloads</a></li>
+        <li class="navbar-li"><a class="navbar-link" href="index.html">Vote</a></li>
+        <li class="navbar-li"><a class="navbar-link" href="index.html">Forums</a></li>
+      </ul>
+    </div>
 
-    <h3>Rates:</h3>
-    <ul>
-      <li>EXP Rate: 5</li>
-      <li>Meso Rate: 5</li>
-      <li>Drop Rate: 2</li>
-    </ul>
+    <div class="main-container">
+      <div class="information">
+        <div class="about-us">
+          <h1 class="about-us-h1">About Us</h1>
+          <hr class="about-us-hr">
+          <p class="about-us-p">Text Text Text Text Text Text Text Text Text Text Text Text</p>
+          <p class="about-us-p">Text Text Text Text Text Text Text Text Text Text Text Text</p>
+          <p class="about-us-p">Text Text Text Text Text Text Text Text Text Text Text Text</p>
+          <p class="about-us-p">Text Text Text Text Text Text Text Text Text Text Text Text</p>
+          <p class="about-us-p">Text Text Text Text Text Text Text Text Text Text Text Text</p>
+          <p class="about-us-p">Text Text Text Text Text Text Text Text Text Text Text Text</p>
+        </div>
 
-    <hr width="150" align="left">
+        <div class="announcements">
+          <h1 class="announcements-h1">Announcements</h1>
+            <hr class="announcements-hr">
+            <ul>
+              <li class="annoucements-li"><a class="announcements-a" href="#"><strong>[Announcement]</strong> Announcement 1</a></li>
+              <li class="annoucements-li"><a class="announcements-a" href="#"><strong>[Announcement]</strong> Announcement 2</a></li>
+              <li class="annoucements-li"><a class="announcements-a" href="#"><strong>[Announcement]</strong> Announcement 3</a></li>
+              <li class="annoucements-li"><a class="announcements-a" href="#"><strong>[Announcement]</strong> Announcement 4</a></li>
+              <li class="annoucements-li"><a class="announcements-a" href="#"><strong>[Announcement]</strong> Announcement 5</a></li>
+            </ul>
+        </div>
 
-    <h3>Features:</h3>
-    <ul>
-      <li>No Pay-To-Win</li>
-      <li>No Hp Washing</li>
-      <li>Voting Rewards</li>
-      <li>Skill Rebalancing</li>
-      <li>Community Events</li>
-    </ul>
+        <div class="events">
+          <h1 class="events-h1">Events</h1>
+            <hr class="events-hr">
+            <ul>
+              <li class="events-li"><a class="events-a" href="#"><strong>[Event]</strong> Event 1</a></li>
+              <li class="events-li"><a class="events-a" href="#"><strong>[Event]</strong> Event 2</a></li>
+              <li class="events-li"><a class="events-a" href="#"><strong>[Event]</strong> Event 3</a></li>
+              <li class="events-li"><a class="events-a" href="#"><strong>[Event]</strong> Event 4</a></li>
+              <li class="events-li"><a class="events-a" href="#"><strong>[Event]</strong> Event 5</a></li>
+            </ul>
+        </div>
+      </div>
+    </div>
 
+    <div class="footer">
+      <p class="footer-p">Website by xirengfx</p>
+    </div>
   </body>
 
 </html>
