--- a/register.html
+++ b/register.html
@@ -4,51 +4,56 @@
   <head>
     <meta charset="utf-8">
     <title>MapleServer | Register</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto+Slab&display=swap" rel="stylesheet">
   </head>
 
   <body>
-    <table cellspacing="20">
-      <tr>
-        <td><img src="images/mapleleaf.png"/></td>
-        <td><h1>MapleServer Website</h1>
-            <h3>Welcome to MapleServer</h3>
-        </td>
-      </tr>
-    </table>
-    <hr>
+    <div class="header">
+      <img class="leaf" src="images/mapleleaf.png" alt="leaf">
+      <h1 class="server-name">MapleServer</h1>
+      <p class="header-p">5x Exp | 2x Meso | 2x Drops</p>
+    </div>
 
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="register.html">Register</a></li>
-      <li><a href="index.html">Download</a></li>
-      <li><a href="index.html">Forums</a></li>
-      <li><a href="index.html">Vote</a></li>
-    </ul>
-    <hr width="150" align="left">
+    <div class="navbar">
+      <ul>
+        <li class="navbar-server-name">MapleServer</li>
+        <li class="navbar-li"><a class="navbar-link" href="index.html">Home</a></li>
+        <li class="navbar-li"><a class="navbar-link" href="register.html">Register</a></li>
+        <li class="navbar-li"><a class="navbar-link" href="index.html">Downloads</a></li>
+        <li class="navbar-li"><a class="navbar-link" href="index.html">Vote</a></li>
+        <li class="navbar-li"><a class="navbar-link" href="index.html">Forums</a></li>
+      </ul>
+    </div>
 
-    <h3>MapleServer Registration</h3>
-    <form class="" action="register.html" method="post">
-      <table>
-        <tr>
-          <td><label>Username:</label></td>
-          <td><input type="text"></td>
-        </tr>
-        <tr>
-          <td><label>Password:</label></td>
-          <td><input type="password"></td>
-        </tr>
-        <tr>
-          <td><label>E-mail:</label></td>
-          <td><input type="email"></td>
-        </tr>
-        <tr>
-          <td><label>Birthdate:</label></td>
-          <td><input type="date"></td>
-        </tr>
-      </table>
-      <br>
-      <input type="submit" name="" value="Register">
-    </form>
+    <div class="register-container">
+      <h3>Register to MapleServer</h3>
+      <form class="registration-form" action="register.html" method="post">
+        <table>
+          <tr>
+            <td><label for="username">Username:</label></td>
+            <td><input type="text" name="username"></td>
+          </tr>
+          <tr>
+            <td><label for="password">Password:</label></td>
+            <td><input type="password" name="password"></td>
+          </tr>
+          <tr>
+            <td><label for="email">E-mail:</label></td>
+            <td><input type="email" name="email"></td>
+          </tr>
+          <tr>
+            <td><label for="birthday">Birthdate:</label></td>
+            <td><input type="date" name="birthday"></td>
+          </tr>
+        </table>
+      </form>
+      <a href="register.html" class="register-button">Register</a>
+    </div>
+
+    <div class="register-footer">
+      <p class="register-footer-p">Website by xirengfx</p>
+    </div>
 
   </body>
 
